# lutdinho

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: Template.fx  cube.rs  lib.rs  main.rs  utils.rs
tests/: cube.rs  test_lut.cube
