[package]
name = "lutdinho"
version = "0.1.0"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "lutdinho"
path = "src/lib.rs"

[[bin]]
name = "lutdinho"
path = "src/main.rs"

[dependencies]
regex = "1.5"
image = "0.23"
