[package]
name = "lutdinho"
version = "0.1.4"
authors = ["Sebastián Aedo <sebastian.aedo@sansano.usm.cl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "lutdinho"
path = "src/lib.rs"

[[bin]]
name = "lutdinho"
path = "src/main.rs"

[dependencies]
regex = { version = "1.5" }
image = { version = "0.23", default-features = false, features = ["png"] }
clap = { version = "2.33" }
rayon = "1.5"
